# self-specializing-agent

./: .gitignore  Makefile  README.md  pyproject.toml  statement.md  validate.py  validator.py
materials/problem-c-generator/files/: generator.cpp
stem_agent/: __init__.py  backends.py  cli.py  codex_json.py  debug_log.py  event_log.py  graph.py  graph_runner.py  json_schema.py  models.py  policies.py  progress.py  runner.py
tests/: test_stem_agent.py
